; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-hotkey.c_query_hotkey.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-hotkey.c_query_hotkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_query_hotkeys_helper = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64, i32*)* @query_hotkey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @query_hotkey(i8* %0, i64 %1, i32* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.obs_query_hotkeys_helper*, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i64, i64* %5, align 8
  %9 = call i32 @UNUSED_PARAMETER(i64 %8)
  %10 = load i8*, i8** %4, align 8
  %11 = bitcast i8* %10 to %struct.obs_query_hotkeys_helper*
  store %struct.obs_query_hotkeys_helper* %11, %struct.obs_query_hotkeys_helper** %7, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = load %struct.obs_query_hotkeys_helper*, %struct.obs_query_hotkeys_helper** %7, align 8
  %14 = getelementptr inbounds %struct.obs_query_hotkeys_helper, %struct.obs_query_hotkeys_helper* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.obs_query_hotkeys_helper*, %struct.obs_query_hotkeys_helper** %7, align 8
  %17 = getelementptr inbounds %struct.obs_query_hotkeys_helper, %struct.obs_query_hotkeys_helper* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.obs_query_hotkeys_helper*, %struct.obs_query_hotkeys_helper** %7, align 8
  %20 = getelementptr inbounds %struct.obs_query_hotkeys_helper, %struct.obs_query_hotkeys_helper* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @handle_binding(i32* %12, i32 %15, i32 %18, i32 %21, i32* null)
  ret i32 1
}

declare dso_local i32 @UNUSED_PARAMETER(i64) #1

declare dso_local i32 @handle_binding(i32*, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
